--- a/SoftwareDesignPatternJourny/C2M1H1_StrategyPattern/C2M1H1_StrategyPattern.csproj
+++ b/SoftwareDesignPatternJourny/C2M1H1_StrategyPattern/C2M1H1_StrategyPattern.csproj
@@ -4,6 +4,11 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <OutputType>Exe</OutputType>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Bogus" Version="34.0.2" />
+    </ItemGroup>
 </Project>
+
