--- a/SoftwareDesignPatternJourny/C2M2H1_TemplateMethod/C2M2H1_TemplateMethod.csproj
+++ b/SoftwareDesignPatternJourny/C2M2H1_TemplateMethod/C2M2H1_TemplateMethod.csproj
@@ -13,5 +13,8 @@
     <ItemGroup>
       <PackageReference Include="Bogus" Version="34.0.2" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Framework" />
+    </ItemGroup>
 
 </Project>
